Refactor code to English and add fictional drivers.